<resources>
    <string name="app_name">DrDoc</string>
    <string name="landing_title"> DrDoc</string>
    <string name="landing_founder"> P&amp;M.co</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StartFirstPost">Start by Uploading Your First Post.</string>
    <string name="stepUpload1">1.Click on the "Upload" button below to get started.</string>
    <string name="stepUpload2">2.In the provided text field, write your medical description. Feel free to include relevant details, emotions, and insights that you would like to share.</string>
    <string name="stemUpload3">3.Once youre satisfied with your post, click the "Upload" button to share it with your friends and the wider community.</string>
    <string name="userNameAvailable">UserName is Available</string>
    <string name="userNameIsAlreadyUsed">UserName is already used.\nTry with another UserName.</string>
    <string name="EmailAvailable">Email is Available</string>
    <string name="EmailIsAlreadyUsed">Email is already used.\nTry with another UserName.</string>
    <string name="about_one">Welcome to our app, where we believe that taking control of your medical history should be simple and convenient. Our mission is to empower individuals by providing them with a secure platform to store and access their personal medical records anytime, anywhere.</string>
    <string name="about_two">We understand that managing your medical history can be a daunting task, especially when it involves keeping track of numerous documents and appointments. Thats why we developed this app, designed to streamline the process and make it easier for you to maintain a comprehensive record of your health.</string>
    <string name="about_three">With our app, you can securely store your medical information, including diagnoses, treatments, medications, allergies, immunizations, and more. It serves as a centralized hub for all your healthcare-related data, enabling you to access it whenever you need it, whether its for a doctors appointment, insurance purposes, or simply for your own peace of mind.</string>
    <string name="about_four">We prioritize your privacy and security. Rest assured that your data is encrypted and protected with the highest level of security measures, ensuring that only you and authorized healthcare professionals can access it. We adhere to strict privacy policies and comply with relevant regulations to safeguard your sensitive information.</string>
    <string name="about_five">Our user-friendly interface and intuitive design make it easy for you to navigate through your medical history, update records, and add new information whenever necessary. You can also set reminders for appointments, track medication schedules, and receive personalized health recommendations based on your history and preferences.</string>
    <string name="about_six">We believe that an informed patient is an empowered patient. By having instant access to your medical history, you can actively participate in your own healthcare decisions, collaborate effectively with healthcare providers, and ensure that you receive the best possible care tailored to your unique needs.</string>
    <string name="about_seven">Join us in revolutionizing the way you manage your medical history. Download our app today and take control of your health journey like never before. We are committed to providing you with a reliable, secure, and user-friendly platform that simplifies your medical record-keeping and puts you in charge of your well-being.</string>
    <string name="about_eight">Remember, your health is your greatest asset, and our app is here to support you every step of the way.</string>
</resources>