<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp"
    >
    <TextView
        android:id="@+id/aboutUsHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="About Us"
        android:fontFamily="@font/segoeuibold"
        android:textColor="@color/appTheme"
        android:textSize="30dp"
        android:padding="20dp"

        />
    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/aboutUsHeading"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_one"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/about_two"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_three"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/about_four"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_five"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/about_six"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_seven"
                android:padding="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:text="@string/about_eight"
                />
                        <TextView
                            android:layout_width="match_parent"
                            android:padding="5dp"
                            android:gravity="center"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoeuibold"
                            android:textSize="25dp"
                            android:text="Meet Our Team"
                            android:textColor="@color/appTheme"
                            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@drawable/prashant"
                        android:layout_marginVertical="20dp"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#009688"
                        app:civ_border_overlay="true"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/linkedin"
                            android:backgroundTint="@color/appTheme"
                        />

                        <ImageButton
                            android:layout_alignParentEnd="true"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:backgroundTint="@color/appTheme"
                            android:background="@drawable/githublogo" />
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Prashant Srivastav"
                        android:fontFamily="@font/segoeuibold"
                        android:textColor="@color/appTheme"
                        android:gravity="center"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Founder and head"
                        android:fontFamily="@font/segoeuibold"
                        android:textColor="@color/appTheme"
                        android:gravity="center"
                        android:textSize="15dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@drawable/muskaan"
                        android:layout_marginVertical="20dp"
                        app:civ_border_width="2dp"
                        app:civ_border_color="#009688"
                        app:civ_border_overlay="true"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:backgroundTint="@color/appTheme"
                            android:background="@drawable/linkedin" />

                        <ImageButton
                            android:layout_alignParentEnd="true"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:backgroundTint="@color/appTheme"
                            android:background="@drawable/githublogo" />
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Muskaan "
                        android:fontFamily="@font/segoeuibold"
                        android:textColor="@color/appTheme"
                        android:gravity="center"
                        android:textSize="20dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Content and Web-development"
                        android:fontFamily="@font/segoeuibold"
                        android:textColor="@color/appTheme"
                        android:gravity="center"
                        android:textSize="15dp"
                        />


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>