<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/Profile_container">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/LoggedUserImage"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/user"
                  android:layout_marginVertical="20dp"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#009688"
                    app:civ_border_overlay="true"
                    android:scaleType="centerCrop"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/Name_of_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="20dp"
                        android:text="Name"
                        />
                    <TextView
                        android:id="@+id/Username_of_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="14dp"
                        android:text="UserName"
                        />
                    <TextView
                        android:id="@+id/noOfPost_of_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="14dp"
                        android:text="0 Prescriptions"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ifEmptyPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Profile_container"
                android:orientation="vertical"
                android:visibility="visible"
                >
                <View
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#009688"

                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/StartFirstPost"
                    android:textSize="15dp"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stepUpload1"
                    android:textSize="12dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stepUpload2"
                    android:textSize="12dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stemUpload3"
                    android:textSize="12dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#009688"

                    />
            </LinearLayout>
            <View
                android:id="@+id/lineIfNotEmptyPost"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#009688"
                android:layout_below="@id/Profile_container"
                android:visibility="visible"
                />
            <LinearLayout
                android:id="@+id/rootContainerOfPost"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <!-- repeat box
                <LinearLayout
                    android:id="@+id/postLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:padding="5dp"
                    android:background="@drawable/border_background_post"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="1dp"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <androidx.constraintlayout.utils.widget.ImageFilterView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_margin="10dp"
                                android:layout_gravity="center"
                                android:src="@mipmap/ic_launcher"
                                android:scaleType="centerCrop"
                                android:id="@+id/postImage"
                                />

                            <TextView
                                android:id="@+id/postTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:text="medical caption should be written to eloborate the prescription."
                                android:textSize="20dp" />


                        </LinearLayout>
                        <TextView
                            android:id="@+id/postTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#009688"
                            android:text="medical upload time"
                            />
                    </LinearLayout>

                </LinearLayout>
                repeat box-->




            </LinearLayout>

        </LinearLayout>
    </ScrollView>








</RelativeLayout>